# TinyOscillator

./: .gitignore  CLAUDE.md  KisNightFuturesChart_example.kt  LLM_SYSTEM_PROMPT.txt  PROGRESS.md  PROMPT.md  PROMPT_park_signal.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  Review_Results.md  TASK.md  build.gradle.kts  gradle.properties  local.properties.example  review_report.md  settings.gradle.kts
.claude/: settings.json
.claude/agents/: algorithm-engine.md  llm-integration.md
.claude/commands/: capture.md
.claude/hooks/: pre-commit-check.md
.claude/plans/: compiled-humming-kahan.md  consensus-invest-opinion-merge.md
.claude/prompts/: project-review.md
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.tinyoscillator.core.database.AppDatabase/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/androidTest/java/com/tinyoscillator/: ComposeInfraSmokeTest.kt
app/src/androidTest/java/com/tinyoscillator/presentation/demark/: DemarkTDChartSmokeTest.kt
app/src/androidTest/java/com/tinyoscillator/presentation/etf/: KrxCredentialDialogSmokeTest.kt
app/src/androidTest/java/com/tinyoscillator/presentation/oscillator/: StockSearchDropdownSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: equity_reports_seed.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_stub.cpp
app/src/main/java/com/tinyoscillator/: MainActivity.kt  TinyOscillatorApp.kt
app/src/main/java/com/tinyoscillator/core/api/: AiApiClient.kt  ApiErrorExtensions.kt  ApiModels.kt  BaseApiClient.kt  BokEcosApiClient.kt  CircuitBreaker.kt  DartApiClient.kt  KisApiClient.kt  KiwoomApiClient.kt  KrxApiClient.kt  OkHttpExtensions.kt
app/src/main/res/drawable/: chart_marker_bg.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ohlcv_marker_bg.xml
app/src/main/res/drawable-night/: chart_marker_bg.xml
app/src/main/res/layout/: chart_marker_view.xml  view_ohlcv_marker.xml
app/src/main/res/layout-night/: chart_marker_view.xml
app/src/main/res/values/: font_certs.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/tinyoscillator/domain/: ComparisonCalculationTest.kt  ProgressiveAnalysisStateTest.kt  ProgressiveAnalysisUseCaseTest.kt  SignalAccuracyCalculationTest.kt  StockGroupAggregationTest.kt
scripts/: capture.ps1  capture.sh  capture_kiwoom_theme.ps1  capture_kiwoom_theme.sh  test-changed.sh
(+564 files in other folders)
